* index.html: Link to old-news.html. 	* old-news.html: New file.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -112,42 +112,13 @@ Java-style.  This makes it much easier to write CNI code which calls
 Java methods that throw exceptions.
 </td></tr>
 <tr><td valign="top">
-<b>February 25, 2000</b>
+<b>Before March 2000</b>
 </td><td>
-Anthony Green added an important optimization to gcj.  His
-optimization eliminates redundant class initializations in some cases.
-It should speed up code which uses static methods or fields.
-</td></tr>
-<tr><td valign="top">
-<b>February 25, 2000</b>
-</td><td>
-Hans Boehm has contributed an IA-64 libffi port.  This is an important
-step towards getting libgcj to run on the IA-64.
-</td></tr>
-<tr><td valign="top">
-<b>February 16, 2000</b>
-</td><td>
-We've done a lot since the previous announcement, but we haven't
-mentioned it here.  Oops!  Here are some of the things we've added:
-complete reflection support, Runtime.loadLibrary,
-Throwable.printStackTrace (this one is <emph>very</emph> cool),
-a Java implementation of java.math.BigInteger, JNI (believed complete
-but still in testing), and, of course, many
-bug fixes and more minor enhancements.
-</td></tr>
-<tr><td valign="top">
-<b>September 6, 1999</b>
-</td><td>
-<a href="gcj-announce.txt">One year later</a>... new web pages.
-</td></tr>
-<tr><td valign="top">
-<b>August 26, 1999</b>
-</td><td>
-<a href="http://sourceware.cygnus.com/ml/java-announce/1999/msg00005.html">Libgcj 2.95.1 is released</a>!  This version corresponds to the GCC 2.95.1 release.
+<a href="old-news.html">Less recent GCJ news</a>
 </td></tr>
 </table>
-
 <br>
+
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
@@ -155,8 +126,6 @@ bug fixes and more minor enhancements.
  </th>
 </tr>
 </table>
-<br>
-
 GCJ is a portable, optimizing, ahead-of-time compiler for the Java
 Programming Language.  It can compile...
 <ul>
@@ -206,7 +175,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.29 2000/03/13 17:23:06 tromey Exp $
+$Id: index.html,v 1.30 2000/03/14 06:15:15 tromey Exp $
 </small>
 </address>
 
