Update the sample frontends. By Tim Josling <tej@melbpc.org.au>.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -21,9 +21,17 @@
   Closures for C++</a> by Thomas M. Breuel, on the design and
   implementation of nested functions in GCC.
 
-  <li><a href="http://www.geocities.com/timjosling/gcc_toc.html">Writing a Compiler Front End to GCC</a> by Tim Josling &lt;<a href="mailto:tej@melbpc.org.au">tej@melbpc.org.au</a>&gt;.
+  <li><a href="http://www.geocities.com/timjosling/gcc_toc.html">Writing a
+  Compiler Front End to GCC</a> by Joachim Nadler and Tim Josling
+  &lt;<a href="mailto:tej@melbpc.org.au">tej@melbpc.org.au</a>&gt;.
 
-  <li><a href="http://members.wri.com/johnnyb/compilers/">A Toy Example Language</a> by Jonathan Bartlett &lt;<a href="mailto:johnnyb@wolfram.com">johnnyb@wolfram.com</a>&gt;.
+  <li><a href="http://members.wri.com/johnnyb/compilers/">A Toy
+  Example Lavnguage</a> by Jonathan Bartlett &lt;<a
+  href="mailto:johnnyb@wolfram.com">johnnyb@wolfram.com</a>&gt;.
+
+  <li><a href="http://www.geocities.com/timjosling/ex.tgz">Example and
+  Toy compilers for current snapshot</a> updated by Tim Josling &lt;<a
+  href="mailto:tej@melbpc.org.au">tej@melbpc.org.au</a>&gt;.
 
   <li><a href="http://wwwspies.informatik.tu-muenchen.de/personen/pizka/">GNU INSEL Compiler gic</a>.
 
