* libgcj2.html: Don't need --enable-java-gc for gcc.

--- a/htdocs/java/libgcj2.html
+++ b/htdocs/java/libgcj2.html
@@ -66,9 +66,7 @@
     <dl>
       <dt>--enable-java-gc=TYPE</dt>
       <dd>Enables the garbage collector.  The default type is
-      ``boehm'', for the Boehm conservative GC.  Note that libgcj must
-      be configured with the same collector specified when building
-      gcj itself.</dd>
+      ``boehm'', for the Boehm conservative GC.</dd>
 
       <dt>--enable-fast-character</dt>
       <dd>libgcj includes two implementations of java.lang.Character.
