Add two news items.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -107,12 +107,32 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>March 14, 2000</b></dt>
+<dd>
+CodeSourcery, LLC is now providing nightly <a
+href="http://www.codesourcery.com/gcc-snapshots.html">snapshots of
+GCC</a>, distributed as RPMs for GNU/Linux on Intel platforms, plus
+build logs and testsuite results.  In order to allow users to more
+easily confirm whether the current snapshot of GCC fixes a particular
+bug, an online compilation <a
+href="http://www.codesourcery.com/gcc-compile.html">web form</a> is
+provided.
+</dd>
+
 <dt><b>March 13, 2000</b></dt>
 <dd>
 Denis Chertykov contributed an AVR port.
 AVR is a family of micro controllers made by Atmel with embedded FLASH
 program memory and embedded RAM.  It is the first GCC port to an 8-bit
 microprocessor with a 16-bit address bus.
+</dd>
+
+<dt><b>March 9, 2000</b></dt>
+<dd>
+CodeSourcery, LLC and Cygnus, a RedHat company, have contributed an
+implementation of <a href="news/ssa.html">static single assignment</a>
+(SSA) representation.  SSA will facilitate the implementation of
+powerful code optimizations in GCC.
 </dd>
 
 <dt><b>March 2, 2000</b></dt>
