--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -70,11 +70,18 @@ i
 
 <table>
 <tr><td valign="top">
+<b>March 15, 2000</b>
+</td><td>
+Jon Beniston contributed the beginnings of a Windows port of libgcj.
+</td></tr>
+
+<tr><td valign="top">
 <b>March 13, 2000</b>
 </td><td>
 Alexandre Petit-Bianco has checked in a change to the compiler to add 
 support for most JDK 1.1 language features, such as inner classes.
 </td></tr>
+
 <tr><td valign="top">
 <b>March 9, 2000</b>
 </td><td>
@@ -88,6 +95,7 @@ so it is usable.
 Please note that it is mostly JDK 1.1 based but there are some JDK 1.2
 things included.
 </td></tr>
+
 <tr><td valign="top">
 <b>March 7, 2000</b>
 </td><td>
@@ -96,6 +104,7 @@ compiler which implements constant-time interface method lookup
 and type checking.  This should provide a huge speed increase
 for programs that use interfaces or things like ``instanceof''.
 </td></tr>
+
 <tr><td valign="top">
 <b>March 6, 2000</b>
 </td><td>
@@ -104,6 +113,7 @@ assigning copyright to the <a href="http://www.gnu.org/">FSF</a>.
 This will let us share code with the
 <a href="http://www.classpath.org">Classpath</a> project.
 </td></tr>
+
 <tr><td valign="top">
 <b>March 2, 2000</b>
 </td><td>
@@ -111,6 +121,7 @@ Tom Tromey changed g++ to allow CNI code to catch and throw exceptions
 Java-style.  This makes it much easier to write CNI code which calls
 Java methods that throw exceptions.
 </td></tr>
+
 <tr><td valign="top">
 <b>Before March 2000</b>
 </td><td>
@@ -175,7 +186,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.30 2000/03/14 06:15:15 tromey Exp $
+$Id: index.html,v 1.31 2000/03/14 17:53:05 tromey Exp $
 </small>
 </address>
 
