--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -35,7 +35,8 @@ href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a> or
   <li>The GCC version</li>
   <li>The system type</li>
   <li>All options you passed to the compiler</li>
-  <li>Preprocessed output of the source file that caused the compiler error</li>
+  <li>Preprocessed output of the source file that caused the compiler
+      error, even if the source code can be downloaded from elsewhere</li>
 </ul>
 
 <p>All this can normally be accomplished by mailing the command line, the
@@ -47,10 +48,11 @@ or `<tt><i>your-file</i>.ii</tt>' for C++, corresponding to:</p>
 <p>Typically the CPP output (extension <code>.i</code> for C or
 <code>.ii</code> for C++) will be large, so please compress the
 resulting file with one of the popular compression programs such as
-<tt>bzip2</tt>, <tt>gzip</tt>, <tt>zip</tt>, <tt>pkzip</tt> or
-<tt>compress</tt> (in decreasing order of preference).  Use maximum
-compression (<code>-9</code>) if available.  Please include the
-compressed CPP output in your bug report.</p>
+<tt>bzip2</tt>, <tt>gzip</tt>, <tt>zip</tt> or <tt>compress</tt> (in
+decreasing order of preference).  Use maximum compression
+(<code>-9</code>) if available.  Please include the compressed CPP
+output in your bug report, even if the source code is freely available
+elsewhere; it makes the job of our volunteer testers much easier.</p>
 
 <p>Since we're supposed to be able to re-create the assembly output
 (extension <code>.s</code>), you usually don't have to include it in
@@ -62,6 +64,15 @@ you.  In any case, make sure the compiler command line, version and
 error output are in plain text, so that we don't have to decode the
 bug report in order to tell who should take care of it.  A meaningful
 subject indicating language and platform also helps.</p>
+
+<p>Please avoid posting an archive (.tar, .shar or .zip); we generally
+need just a single file to reproduce the bug (the .i/.ii preprocessed
+file), and, by storing it in an archive, you're just making our
+volunteers' jobs harder.  Only when your bug report requires multiple
+source files to be reproduced should you use an archive.  In any case,
+make sure the compiler version, error message, etc, are included in
+the body of your bug report as plain text, even if needlessly
+duplicated as part of an archive.</p>
 
 <p>The gcc lists have message size limits (100 kbytes) and bug reports
 over those limits will currently be bounced.  We're trying to find a
