Add ia64 and tail call optimization new item.  Rotate out older news.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -107,6 +107,18 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>March 17, 2000</b></dt>
+<dd>
+Richard Henderson and Jim Wilson of Cygnus, a RedHat company, have
+contributed a port for the Intel Itanium (aka IA64) processor.
+
+<br><br>Jeff Law and Richard Henderson of Cygnus, a RedHat company, have contributed
+RTL based tail call elimination optimizations.  Support currently exists for
+the Alpha, HPPA, ia32 and MIPS processors.  Long term the RTL based
+tail call optimizations will be replaced with a tree based tail call
+optimizer.
+</dd>
+
 <dt><b>March 14, 2000</b></dt>
 <dd>
 CodeSourcery, LLC is now providing nightly <a
@@ -151,26 +163,6 @@ Cygnus, a Red Hat company, contributed an M*Core port.
 <dt><b>January 4, 2000</b></dt>
 <dd>
 Steve Chamberlain has contributed a picoJava port.
-</dd>
-
-<dt><b>December 10, 1999</b></dt>
-<dd>
-CodeSourcery, LLC has contributed a new <a href="news/inlining.html">inliner for
-C++</a>. As a result, the compiler may use dramatically less
-time and memory to compile programs that make heavy use of templates.
-</dd>
-
-
-<dt><b>December 1, 1999</b></dt>
-<dd>
-Cygnus has donated support for the Matsushita AM33 processor (a member
-of the MN10300 processor family).  The MN103 family is targeted towards
-embedded consumer products such as DVD players, HDTV, etc.
-</dd>
-
-<dt><b>October 27, 1999</b></dt>
-<dd>
-<a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2 is released</a>.
 </dd>
 
 </dl>
