--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -12,6 +12,26 @@ home page</a>.
 
 <dl>
 
+<dt><b>December 10, 1999</b></dt>
+<dd>
+CodeSourcery, LLC has contributed a new <a href="news/inlining.html">inliner for
+C++</a>. As a result, the compiler may use dramatically less
+time and memory to compile programs that make heavy use of templates.
+</dd>
+
+
+<dt><b>December 1, 1999</b></dt>
+<dd>
+Cygnus has donated support for the Matsushita AM33 processor (a member
+of the MN10300 processor family).  The MN103 family is targeted towards
+embedded consumer products such as DVD players, HDTV, etc.
+</dd>
+
+<dt><b>October 27, 1999</b></dt>
+<dd>
+<a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2 is released</a>.
+</dd>
+
 <dt><b>October 16, 1999</b></dt>
 <dd>
 <p>Craig Burley, our lead Fortran developer and the original author
