Add Fortran 95 announcement. By Toon Moene <toon@moene.indiv.nluug.nl>.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -107,12 +107,20 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>March 18, 2000</b></dt>
+<dd>
+Andy Vaught has started work on GNU Fortran 95, the Fortran
+Frontend destined to implement the latest standard.  See
+<a href="http://xena.eas.asu.edu/~andy">this page</a> for its current
+status.
+</dd>
+
 <dt><b>March 17, 2000</b></dt>
 <dd>
 Richard Henderson and Jim Wilson of Cygnus, a RedHat company, have
 contributed a port for the Intel Itanium (aka IA64) processor.
-
-<br><br>Jeff Law and Richard Henderson of Cygnus, a RedHat company, have contributed
+<br><br>
+Jeff Law and Richard Henderson of Cygnus, a RedHat company, have contributed
 RTL based tail call elimination optimizations.  Support currently exists for
 the Alpha, HPPA, ia32 and MIPS processors.  Long term the RTL based
 tail call optimizations will be replaced with a tree based tail call
