--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -117,10 +117,11 @@ status.
 
 <dt><b>March 17, 2000</b></dt>
 <dd>
-Richard Henderson and Jim Wilson of Cygnus, a RedHat company, have
-contributed a port for the Intel Itanium (aka IA64) processor.
+Jim Wilson and Richard Henderson of Cygnus, a Red Hat company, and
+David Mosberger of HP labs have
+contributed a port for the Intel Itanium (aka IA-64) processor.
 <br><br>
-Jeff Law and Richard Henderson of Cygnus, a RedHat company, have contributed
+Jeff Law and Richard Henderson of Cygnus, a Red Hat company, have contributed
 RTL based tail call elimination optimizations.  Support currently exists for
 the Alpha, HPPA, ia32 and MIPS processors.  Long term the RTL based
 tail call optimizations will be replaced with a tree based tail call
@@ -149,7 +150,7 @@ microprocessor with a 16-bit address bus.
 
 <dt><b>March 9, 2000</b></dt>
 <dd>
-CodeSourcery, LLC and Cygnus, a RedHat company, have contributed an
+CodeSourcery, LLC and Cygnus, a Red Hat company, have contributed an
 implementation of <a href="news/ssa.html">static single assignment</a>
 (SSA) representation.  SSA will facilitate the implementation of
 powerful code optimizations in GCC.
