Added Mark to the committee list

--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -18,7 +18,7 @@ announcement below].
 
 <h2>GCC steering committee members</h2>
 
-At the moment the steering committee has 13 members. The best place to
+At the moment the steering committee has 14 members. The best place to
 reach them is the gcc <a href="lists.html">mailinglist</a>.
 
 <ul>
@@ -31,6 +31,7 @@ reach them is the gcc <a href="lists.html">mailinglist</a>.
 <li>Marc Lehmann (Technische Universität Karlsruhe)
 <li>Jason Merrill (Cygnus)
 <li>David Miller (RedHat)
+<li>Marc Mitchell (CodeSourcery)
 <li>Toon Moene (Koninklijk Nederlands Meteorologisch Instituut)
 <li>Gerald Pfeifer (Vienna University of Technology)
 <li>Joel Sherrill (OAR Corporation)
