Announce Mark Mitchell as new RM and SC member. Rotate news.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -107,6 +107,19 @@ maintain and improve quality.
 
 <dl>
 
+<dt><b>March 22, 2000</b></dt>
+<dd>
+The Steering Committee has appointed Mark Mitchell, of <a
+href="http://www.codesourcery.com">CodeSourcery, LLC</a>, to manage the
+GCC 3.0 release and as a new Steering Committe member.
+CodeSourcery will be providing time from Mark, Alex Samuel, and other
+personnel, to manage the release.  Thanks!
+<p>
+The Steering Committee and the GCC community owe Jeff Law an immense
+debt for his work as release manager for the EGCS 1.0.x, 1.1.x, and
+GCC 2.95.x series of releases.  He has done an outstanding job.
+</dd>
+
 <dt><b>March 18, 2000</b></dt>
 <dd>
 Andy Vaught has started work on GNU Fortran 95, the Fortran
@@ -162,16 +175,6 @@ Jason Molenda, who had a major role in setting up and managing the
 gcc.gnu.org (originally egcs.cygnus.com) machine and site, is leaving
 Cygnus. We would like to thank him for his efforts and support behind
 the scenes and wish Jason all the best in his new job.
-</dd>
-
-<dt><b>February 23, 2000</b></dt>
-<dd>
-Cygnus, a Red Hat company, contributed an M*Core port.
-</dd>
-
-<dt><b>January 4, 2000</b></dt>
-<dd>
-Steve Chamberlain has contributed a picoJava port.
 </dd>
 
 </dl>
