--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -48,7 +48,7 @@ installation on non-Sun systems or when using GNU make.</p>
 
 <p>Contact: <a href="mailto:hp@axis.se">hp@axis.se</a></p>
 
-<h2><a name="libgxx"><a href="http://www.m-hollstein.de/libgxx/">Libg++</a></h2>
+<h2><a name="libgxx"><a href="http://www.cygnus.com/~manfredh/libgxx/">Libg++</a></h2>
 
 <p><code>Libg++</code>, the GNU C++ library, is an attempt to
 provide a variety of C++ programming tools and other support to
