--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -26,7 +26,7 @@
   &lt;<a href="mailto:tej@melbpc.org.au">tej@melbpc.org.au</a>&gt;.
 
   <li><a href="http://members.wri.com/johnnyb/compilers/">A Toy
-  Example Lavnguage</a> by Jonathan Bartlett &lt;<a
+  Example Language</a> by Jonathan Bartlett &lt;<a
   href="mailto:johnnyb@wolfram.com">johnnyb@wolfram.com</a>&gt;.
 
   <li><a href="http://www.geocities.com/timjosling/ex.tgz">Example and
