Minor fixes spotted by an anonymouse lurker.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -46,10 +46,7 @@ to check out our web pages.
 
 <p>Once you've got the repository checked out, <code>cvs update</code>
 will sync your local copy with the repository.  See the CVS manual for
-additional information on how to use CVS. (Besides downloads of recent
-versions of CVS Cyclic Software also has a <a
-href="http://www.cyclic.com/cvs/doc-blandy.html">reasonably simple
-introduction</a> to CVS.)
+additional information on how to use CVS.
 
 <p>CVS versions up to 1.10.4 have "Y2K problems".  Refer to
 <a href="http://www.cyclic.com/cvs/dev-y2k.html">
