--- a/htdocs/timeline.html
+++ b/htdocs/timeline.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-The egcs project maintained two kinds of version numbers. one was of the
+The egcs project maintained two kinds of version numbers. One was of the
 form 2.9x.yy and indicated the relationship between the GCC sources and
 the EGCS sources.
 <p>
@@ -13,7 +13,7 @@ The other version number identified EGCS releases (as compared to
 development snapshots). So far, there have been releases 1.0.x, and
 1.1.x.
 
-<p> After the April, 1999 merger between GCC and EGCS, only a single version
+<p> After the April 1999 merger between GCC and EGCS, only a single version
 number is maintained.
 
 <p>
