Add blurb about being silent when committing approved patches

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -124,6 +124,11 @@ the appropriate policies.
 pages, comments and similar stuff need not be approved.  Just check in the
 fix.  We don't want to get overly anal about checkin policies.
 
+<p>When you have checked in a patch exactly as it has been approved, you
+do not no need to tell that to people -- including the approver.  People
+interested in when a particular patch is committed can check CVS or the <a
+href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a> list.
+
 <hr>
 <a name="checkin"><h2>Checking in a change</h2></a>
 
