* download.html: Update from Matt Welsh.
	* index.html: Mention IA-64 port.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -1,5 +1,5 @@
 <html>
-<title>GCJ - Download</title>
+<title>GCJ - Downloading</title>
 <body bgcolor="white">
 
 <table border=0>
@@ -44,6 +44,12 @@ i
 <br><br>
 <h1>Downloading GCJ</h1>
 
+<p>
+There are several versions of GCJ and the LibGCJ runtime which are
+known to work. For most users we strongly suggest sticking to the
+<b>current stable release</b>. However, you have other options -- see below.
+<p>
+
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
@@ -69,8 +75,9 @@ Libgcj 2.95.1 is available from
 ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz
 </a>
 
-<p>
 
+
+<p>
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
@@ -83,6 +90,16 @@ ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz
 The latest development sources are available in two forms: periodic
 snapshots, and directly from the cvs source repository.
 
+<p>
+Note that the current development sources are generally for
+"bleeding edge" developers, and those who need features not found in 
+older, more stable, versions. Also note that the current development
+sources may have bugs which prevent it from compiling or running; 
+however, these things should be fixed immediately. Please
+<a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">submit a problem report</a> if you are
+using the development sources and run into such a problem.
+
+<p>
 <h3>Snapshots</h3>
 GCC snapshots are made about once a week.  They are available from
 <a href="ftp://gcc.cygnus.com/pub/egcs/snapshots/index.html">ftp://gcc.cygnus.com/pub/egcs/snapshots/index.html</a>.
@@ -110,6 +127,74 @@ href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/gcc/java">cvs
 archive</a> (the entire compiler is also 
 <a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs">available</a>.)
 
+
+<p>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ Development tree status
+ </th>
+</tr>
+</table>
+<br>
+
+Several versions of gcj/libgcj from the CVS tree are known to work in
+various configurations. Other versions are also known to have bugs. The
+following tables list, for each architecture, recent reports of 
+success/failure with GCJ versions other than the stable release.
+
+<p> 
+If you are successfully using a GCJ release other than the stable one,
+please email <a href="mailto:java-discuss@sourceware.cygnus.com">the 
+GCJ Discussion mailing list</a> to report it. Thanks!
+
+
+<p>
+<table border="0" cellpadding="4" cellspacing="4" fgcolor="#ff0000" rules="all" width="90%">
+<tr>
+<td align="left" bgcolor="#b0ffd0" colspan="5">
+<b>Linux x86</b>
+</td>
+<tr bgcolor="#d0d0d0" valign=top>
+
+<td>GCJ version</td>
+<td>libgcj version</td>
+<td>Notes</td>
+<td>Reported by</td>
+<td>Date</td>
+</tr>
+
+<tr valign=top>
+<td>gcc-2.95.2 with <a href="http://waitaki.otago.ac.nz/~bryce/gcj/">patches from Bryce McKinlay</a></td>
+<td>libgcj from CVS from March 02, 2000 00:00:00
+(Newer versions may not work with gcc-2.95.2 due to later
+changes to libgcj to support throw/catch in CNI.)
+</td>
+<td>Trying to use this to get gij/interpreter support with stable gcj.
+<p>Some bugs with threads, still working on fixing them</td>
+<td><a href="mailto:mdw@cs.berkeley.edu">Matt Welsh</a></td>
+<td>March 21, 2000</td>
+</tr>
+
+<tr valign=top>
+<td>gcc-2.95.2 with <a href="http://waitaki.otago.ac.nz/~bryce/gcj/">patches from Bryce McKinlay</a></td>
+<td>libgcj from CVS from November 4, 1999</td>
+</td>
+<td>This version of libgcj does not have complete gij support, but it
+is very stable. I have seen strange bugs in the interface method dispatch
+routines with multithreaded code, however, newer versions of libgcj have
+revamped the interface dispatch routines, so it's probably not worth fixing.
+<p>This is the version used by Jaguar. See
+<a href="http://www.cs.berkeley.edu/~mdw/proj/jaguar/">this web page</a>
+for more details on downloading and using this release.</td>
+<td><a href="mailto:mdw@cs.berkeley.edu">Matt Welsh</a></td>
+<td>March 21, 2000</td>
+</tr>
+
+</table>
+
+
 </td></tr>
 </table>
 
@@ -119,7 +204,7 @@ archive</a> (the entire compiler is also
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.4 2000/02/11 23:21:57 apbianco Exp $
+$Id: download.html,v 1.5 2000/03/13 17:23:06 tromey Exp $
 </small>
 </address>
 
