--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -70,6 +70,13 @@ i
 
 <table>
 <tr><td valign="top">
+<b>March 26, 2000</b>
+</td><td>
+Hans Boehm contributed a port of libgcj to the IA-64.  This port
+includes the interpreter.
+</td></tr>
+
+<tr><td valign="top">
 <b>March 15, 2000</b>
 </td><td>
 Jon Beniston contributed the beginnings of a Windows port of libgcj.
@@ -186,7 +193,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.31 2000/03/14 17:53:05 tromey Exp $
+$Id: index.html,v 1.32 2000/03/15 22:07:33 tromey Exp $
 </small>
 </address>
 
