2000-03-27  Glenn Chambers <gchambers@provsol.com>
	* faq.html: Remove bogus '-c' from gij shared library
	example

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -196,7 +196,7 @@
 	much like a traditional virtual machine. You can even use "gij" to run a shared library 
 	which is compiled from java code and contains a main method:
 <pre>
-$ gcj -shared -c -o HelloWorld.so HelloWorld.java
+$ gcj -shared -o HelloWorld.so HelloWorld.java
 $ gij HelloWorld
 </pre>
           This works because gij uses Class.forName, which now knows how to load shared objects.
@@ -746,7 +746,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.18 2000/03/13 17:23:06 tromey Exp $ </small></address>
+<small> $Id: faq.html,v 1.19 2000/03/15 05:16:52 bryce Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
