Roll back mistake in last change.

--- a/htdocs/java/port-threads.html
+++ b/htdocs/java/port-threads.html
@@ -38,8 +38,8 @@ gcc's configure script understands --enable-threads just as libjava's
 does; the two must agree so that a single configure from the top level
 will succeed.
 
-<li>Write a new ``PORT-threads.h'' header file.  See the existing no-threads.h
-or posix-threads.h to see what must go into this file.
+<li>Write a new ``gthr-PORT.h'' header file.  See the existing gthr.h
+to see what must go into this file.
 
 <li>Contact the gcc maintainers and try to get your patch installed.
 Allocate plenty of time for this step.
