Fixed typo in URL of infrastructure directory. By Branko Cibej <branko.cibej@hermes.si>.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -96,8 +96,8 @@ is: Autoconf, Bison, Xgettext, Automake, and Gperf.
 <p>The current version of Gperf (v2.7) does not support the -F
 flag, which is used to build GCC.  A patch to change Gperf to 
 support the -F flag is available at 
-<a href="ftp://gcc.gnu/org/pub/egcs/infrastructure/">
-ftp://gcc.gnu/org/pub/egcs/infrastructure/</a>
+<a href="ftp://gcc.gnu.org/pub/egcs/infrastructure/">
+ftp://gcc.gnu.org/pub/egcs/infrastructure/</a>
 
 <h3>CVS tags and checkouts</h3>
 
