CVS is not hosted at Cyclic any longer. Remove redundancy. Minor changes.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -23,6 +23,10 @@ history online</a>.
 
 <h2>Using the CVS repository</h2>
 
+<p>If you don't already have CVS, we recommend you pick up a recent copy
+from <a href="http://www.sourcegear.com/CVS/">SourceGear</a>. (Note that
+CVS versions up to 1.10.4 have "Y2K problems".)
+
 <p>Assuming you have CVS installed on your machine you can check out the 
 GCC sources with the following sequence of commands:
 
@@ -48,9 +52,6 @@ to check out our web pages.
 will sync your local copy with the repository.  See the CVS manual for
 additional information on how to use CVS.
 
-<p>CVS versions up to 1.10.4 have "Y2K problems".  Refer to
-<a href="http://www.cyclic.com/cvs/dev-y2k.html">
-http://www.cyclic.com/cvs/dev-y2k.html</a> for details.</p>
 
 <h3><a name="generated_files"></a>Generated files</h3>
 
