2000-03-29	Glenn Chambers <gchambers@provsol.com>
	* faq.html: Update license text for new GPL+libgcc-exception
	fix spello.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -123,7 +123,12 @@
           <h3><a name="1_1">1.1 What license is used for libgcj?</a></h3>
         </dt>
         <p> 
-        <dd>libgcj is distributed under the Library GPL.</dd>
+        <dd>
+          libgcj is distributed under the GPL, with the 'libgcc exception'.
+          This means that if linking with libgcj does not by itself cause
+          your program to fall under the GPL.  See LIBGCJ_LICENSE in
+          the source tree for more details.
+        </dd>
         <p></p>
         <dt> 
           <hr>
@@ -320,7 +325,7 @@ $ gij HelloWorld
               <p>1) Swing 1.1.1 for JDK 1.1.x with license that allows to redistribute 
                 it as part of the value-added applet or application. This needs 
                 some research, however I feel that the term "value-added application" 
-                might inlcude e.g. gcj-based development system; if it is not 
+                might include e.g. gcj-based development system; if it is not 
                 by itself, a simple Swing-based application might be added to 
                 the distribution). This version depends on AWT 1.1 only (well, 
                 1.1.x, x >=7) and it seems that the Sun's version could be used 
@@ -746,7 +751,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.19 2000/03/15 05:16:52 bryce Exp $ </small></address>
+<small> $Id: faq.html,v 1.20 2000/03/27 20:23:21 tromey Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
