Have links to the online docs generated from texinfo sources refer to the gcc.gnu.org site.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -14,19 +14,19 @@ existing release.</p>
 
 <ul>
   <li><a href="../install/index.html">GCC Installation Instructions</a>
-  <li><a href="gcc_toc.html">GCC Manual</a>
-  <li><a href="g77_toc.html">G77 Manual</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gcc_toc.html">GCC Manual</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/g77_toc.html">G77 Manual</a>
   <ul> 
-     <li><a href="g77_news.html">G77 News</a>
-     <li><a href="g77_bugs.html">G77 Bugs</a>
+     <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">G77 News</a>
+     <li><a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">G77 Bugs</a>
   </ul>
-  <li><a href="ir_toc.html">Tree Representation Internals</a>
-  <li><a href="gxxint_toc.html">G++ Internals Manual</a>
-  <li><a href="cpp_toc.html">CPP Manual</a>
-  <li><a href="gcov_toc.html">GCOV Manual</a>
-  <li><a href="iostream_toc.html">iostream Manual</a>
-  <li><a href="chill_toc.html">Chill Manual</a>
-  <li><a href="objc-features_toc.html">ObjC Features</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/ir_toc.html">Tree Representation Internals</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gxxint_toc.html">G++ Internals Manual</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/cpp_toc.html">CPP Manual</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gcov_toc.html">GCOV Manual</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/iostream_toc.html">iostream Manual</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/chill_toc.html">Chill Manual</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/objc-features_toc.html">ObjC Features</a>
 </ul>
 
 </body>
