--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -271,6 +271,8 @@ tahoe. These are listed here just for completeness.
 
   <li><a href="ftp://sgigate.sgi.com/pub/dwarf/">DWARF v2 spec and sample implementation</a>
 
+  <li><a href="http://reality.sgi.com/davea/objectinfo.html">Debugging/object info</a> by David B.Anderson (including links to some DWARF tools)
+
   <li><a href="http://www.as400.ibm.com/beyondtech/translator.htm">AS/400 compiler optimizer information</a>
 
 <p>
